--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -16,7 +16,8 @@
     "pug-plain-loader": "^1.1.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.2.5",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-upload-component": "^2.8.22"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
