--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "joi": "^17.4.2",
     "laabr": "^6.1.3",
     "multiparty": "^4.2.2",
+    "natural": "^5.1.0",
     "nconf": "^0.11.3",
     "pdf2json": "^1.2.3",
     "pdf2pic": "^2.1.4",
