--- a/api/package.json
+++ b/api/package.json
@@ -12,8 +12,11 @@
     "multiparty": "^4.2.2",
     "natural": "^5.1.0",
     "nconf": "^0.11.3",
+    "node-tesseract-ocr": "^2.2.1",
+    "pdf2image": "^1.2.3",
     "pdf2json": "^1.2.3",
     "pdf2pic": "^2.1.4",
+    "request-promise-native": "^1.0.9",
     "tesseract.js": "^2.1.5",
     "xlsx": "^0.17.1"
   },
