--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "pdf2image": "^1.2.3",
     "pdf2json": "^1.2.3",
     "pdf2pic": "^2.1.4",
+    "redis": "^3.1.2",
     "request-promise-native": "^1.0.9",
     "tesseract.js": "^2.1.5",
     "xlsx": "^0.17.1"
