--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,8 @@
     "@hapi/hapi": "^20.1.5",
     "@hapi/inert": "^6.0.4",
     "@hapi/vision": "^6.1.0",
+    "axios": "^0.21.2",
+    "form-data": "^4.0.0",
     "hapi-swagger": "^14.2.4",
     "ip": "^1.1.5",
     "joi": "^17.4.2",
@@ -15,7 +17,6 @@
     "node-tesseract-ocr": "^2.2.1",
     "pdf2image": "^1.2.3",
     "pdf2json": "^1.2.3",
-    "pdf2pic": "^2.1.4",
     "redis": "^3.1.2",
     "request-promise-native": "^1.0.9",
     "tesseract.js": "^2.1.5",
