--- a/api/package.json
+++ b/api/package.json
@@ -14,10 +14,9 @@
     "nconf": "^0.11.3",
     "node-tesseract-ocr": "^2.2.1",
     "pdf2image": "^1.2.3",
-    "pdf2json": "^1.2.3",
     "redis": "^3.1.2",
+    "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "tesseract.js": "^2.1.5",
     "xlsx": "^0.17.1"
   },
   "scripts": {
